    &#8226; Parse hashtags and users to a different text color in timeline<br/>
    &#8226; Added a default user header if they have no banner<br/>
    &#8226; fixes for list refreshing after clicking notification<br/>
    &#8226; fixes for the notifications and added expanded options for them<br/>
    &#8226; fixes for the unread counts and how they work<br/>
    &#8226; changes to search to allow searching by username<br/><br/>
<br/>

Version 0.50: This is now a real, completely functional twitter app. EVERYTHING seems to be working<br/><br/>
    &#8226; All settings working in the settings menu.<br/>
    &#8226; World trends working <br/>
    &#8226; Searching twitter working <br/>
    &#8226; Twitter lists working<br/>
    &#8226; Followers and following lists now working for profiles <br/>
    &#8226; Notifications for new tweets, direct messages, and mentions<br/>
    &#8226; Favorite Users page. They can be added from the profile activities
    &#8226; Trimming of databases and cache<br/>
    &#8226; New slim font (Roboto light)<br/>
    &#8226; Updates mentions when you update the timeline as well<br/>
    &#8226; Changes to the profiles<br/>
    &#8226; Feedback on button presses<br/>
    &#8226; Attach images from the compose activity and reply activity<br/>
    &#8226; Style changes<br/>
    &#8226; Fix for user pictures on profiles<br/>
    &#8226; Refresh changes<br/>
    &#8226; Changelog added<br/>
    &#8226; number of tweets, followers, and following on profile<br/>
    &#8226; length counter on tweets (can't go over 140)<br/>
    &#8226; Shadows on the drawers
    &#8226; tons of other bug fixes<br/><br/>
<br/>

Version 0.30:<br/><br/>
    &#8226; Reduced memory footprint<br/>
    &#8226; Better Handling of images everywhere<br/>
    &#8226; Favorite Tweets page<br/>
    &#8226; Retweets of you page<br/>
    &#8226; New actions in the action bar on the tweets<br/>
    &#8226; Compose new direct messages from action bar and profiles<br/>